force-app/main/default/objects/Gantt_Project__c/Gantt_Project__c.object-meta.xml
<CustomObject>
    <label>Gantt Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gantt Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>