force-app/main/default/objects/Gantt_Project__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gantt Projects</relationshipLabel>
    <relationshipName>Gantt_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>